[package]
name = "escape_menu"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "The ESC menu."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.11.2"

default-features = false

[dependencies]
num-traits = "0.2.16"
resources = { path = "../resources" }
hud = { path = "../hud" }
ui = { path = "../ui" }
graphics = { path = "../graphics" }
