[package]
name = "examinable"
version = "0.0.3-snap7-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="Items that can be examined."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[dependencies.bevy]
version = "0.8.0"
default-features = false

[dependencies]
api = { path = "../api" }
actions = { path = "../actions" }
networking = { path = "../networking" }
networking_macros = { path = "../networking_macros" }
