[package]
name = "graphics"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Manages graphics preferences for performance and visual optimizations."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.11.0"
default-features = false

[dependencies]
serde = "1.0.177"
ron = "0.8.0"
num-derive = "0.3.3"
num-traits = "0.2.16"
resources = { path = "../resources" }
