[package]
name = "gridmap"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "The map consisting of cells representing the ship."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.11.2"

default-features = false

[dependencies]
bevy_xpbd_3d = { version = "0.2.0" , features = ["enhanced-determinism"], git = "https://github.com/starwolfy/bevy_xpbd.git", branch="fixedtime"}
serde = "1.0.177"
typename = "0.1.2"
ron = "0.8.0"
bincode = "1.3.3"
bevy_renet = "0.0.9"
doryen_fov = { path = "../doryen_fov" }
networking = { path = "../networking" }
entity = { path = "../entity" }
actions = { path = "../actions" }
pawn = { path = "../pawn" }
resources = { path = "../resources" }
text_api = { path = "../text_api" }
player = { path = "../player" }
physics = { path = "../physics" }
cameras = { path = "../cameras" }
