[package]
name = "gridmap_meta"
version = "0.0.3-snap7-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="Meta gridmap resources."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[dependencies.bevy]
version = "0.8.1"
default-features = false

[dependencies]
