[package]
name = "health"
version = "0.0.3-snap7-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="Health for entities."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[dependencies.bevy]
version = "0.8.0"
default-features = false

[dependencies]
networking = { path = "../networking" }
networking_macros = { path = "../networking_macros" }
api = { path = "../api" }
senser = { path = "../senser" }
examinable = { path = "../examinable" }
sensable = { path = "../sensable" }
server = { path = "../server" }
