[package]
name = "hud"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Player HUD."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.10.1"
default-features = false

[dependencies]

resources = { path = "../resources"}
player = { path = "../player"}
networking = { path = "../networking"}
inventory = { path = "../inventory"}
entity = { path = "../entity"}
actions = { path = "../actions"}
ui = { path = "../ui"}
chat = { path = "../chat"}
console_commands = { path = "../console_commands"}
metadata = { path = "../metadata"}
