[package]
name = "hud"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Player HUD."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.12"

default-features = false

[dependencies]
bevy_renet = {version = "0.0.9", git="https://github.com/lucaspoffo/renet.git", branch="master" }

resources = { path = "../resources"}
player = { path = "../player"}
networking = { path = "../networking"}
inventory = { path = "../inventory"}
entity = { path = "../entity"}
actions = { path = "../actions"}
ui = { path = "../ui"}
chat = { path = "../chat"}
console_commands = { path = "../console_commands"}
metadata = { path = "../metadata"}
