[package]
name = "hud"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Player HUD."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.13.0"

default-features = false

[dependencies]
bevy_renet = { version = "0.0.11", git = "https://github.com/starwolfy/renet.git"}

resources = { path = "../resources"}
player = { path = "../player"}
networking = { path = "../networking"}
inventory = { path = "../inventory"}
entity = { path = "../entity"}
actions = { path = "../actions"}
ui = { path = "../ui"}
chat = { path = "../chat"}
console_commands = { path = "../console_commands"}
metadata = { path = "../metadata"}
