[package]
name = "humanoid"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Humanoid entities share animations and API."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"


[dependencies.bevy]
version = "0.12.1"

default-features = false

[dependencies]
vector2math = "0.14.0"
bevy_renet = { version = "0.0.10", git = "https://github.com/starwolfy/renet.git"}
const_format = "0.2.31"
bevy_xpbd_3d = { version = "0.3.2" , features = ["enhanced-determinism"]}

networking = { path = "../networking" }
pawn = { path = "../pawn" }
combat = { path = "../combat" }
sfx = { path = "../sfx" }
entity = { path = "../entity" }
resources = { path = "../resources" }
text_api = { path = "../text_api" }
controller = { path = "../controller" }
player = { path = "../player" }
inventory = { path = "../inventory" }
physics = { path = "../physics" }
cameras = { path = "../cameras" }
