[package]
name = "inventory"
version = "0.0.3-snap8-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Inventory management of entities."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"


[dependencies.bevy]
version = "0.9.1"
default-features = false

[dependencies]
bevy_rapier3d = "0.19.0"
rand = "0.8.5"
serde = "1.0.150"
typename = "0.1.2"

networking = { path = "../networking" }
sounds = { path = "../../entities/sounds" }
pawn = { path = "../pawn" }
sfx = { path = "../sfx" }
gridmap = { path = "../gridmap" }
actions = { path = "../actions" }
entity = { path = "../entity" }
resources = { path = "../resources" }
math = { path = "../math" }
physics = { path = "../physics" }
text_api = { path = "../text_api" }
console_commands = { path = "../console_commands" }
