[package]
name = "inventory"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "Inventory management of entities."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"


[dependencies.bevy]
version = "0.12"

default-features = false

[dependencies]
serde = "1.0.177"
typename = "0.1.2"
bevy_xpbd_3d = { version = "0.3.2" , features = ["enhanced-determinism"]}

networking = { path = "../networking" }
pawn = { path = "../pawn" }
entity = { path = "../entity" }
resources = { path = "../resources" }
physics = { path = "../physics" }
text_api = { path = "../text_api" }
console_commands = { path = "../console_commands" }
cameras = { path = "../cameras" }
