[package]
name = "inventory_item"
version = "0.0.3-snap7-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="InventoryItems interact with Inventory entities."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[dependencies.bevy]
version = "0.8.1"
default-features = false

[dependencies]
entity = { path = "../entity" }
console_commands = { path = "../console_commands" }


actions = { path = "../actions" }
networking = { path = "../networking" }
server = { path = "../server" }
showcase = { path = "../showcase" }
inventory_api = { path = "../inventory_api" }
chat_api = { path = "../chat_api" }
physics = { path = "../physics" }
