[package]
name = "main_menu"
version = "0.0.3-snap7-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="The main menu displayed on the client at launch."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[features]
client = []

[dependencies.bevy]
version = "0.8.1"

[dependencies]
resources = { path = "../resources" ,  features=["client"]}
