[package]
name = "main_menu"
version = "0.0.3-snap8-dev"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description="The main menu displayed on the client at launch."
homepage="https://starwolves.io"
repository="https://gitlab.starwolves.io/starwolves/space"
documentation="https://docs.sf.starwolves.io"
license-file="LICENSE"
edition = "2021"

[features]
client = []

[dependencies.bevy]
version = "0.9.0"

[dependencies]
open = "3.0.3"

resources = { path = "../resources" ,  features=["client"]}
ui = { path = "../ui" ,  features=["client"]}
networking = { path = "../networking" ,  features=["client"]}
