[package]
name = "main_menu"
version = "0.0.3"
authors = ["Nikita Ramses Abdoelrahman <ramses@starwolves.io>"]
description = "The main menu displayed on the client at launch."
homepage = "https://starwolves.io"
repository = "https://gitlab.starwolves.io/starwolves/space"
documentation = "https://docs.sf.starwolves.io"
license-file = "LICENSE"
edition = "2021"



[dependencies.bevy]
version = "0.11.2"


[dependencies]
open = "4.2.0"
local_ipaddress = "0.1.3"

resources = { path = "../resources"}
ui = { path = "../ui"}
networking = { path = "../networking" }
player = { path = "../player" }
escape_menu = { path = "../escape_menu" }
hud = { path = "../hud" }
token = { path = "../token" }
entity = { path = "../entity" }
